Made new DTO for adding rsvp